2001-05-18  Scott S. Goodwin  <scott@scottg.net>

        * init.c, nsopenssl.c, ssl.c, tclcmds.c, Makefile: integrated
        changes from Jim Davidson and Kris Rehberg to make nsopenssl work
        with AOLserver 4.x's new communication API. 3.x-specific code is
        wrapped with '#ifdef AS3' everywhere it needs to be. nsopenssl at
        this point defaults to compiling for 4.x. To make it compile with
        AOLserver 3.x, do the following:

        make OPENSSL=/path/to/installed/openssl AS3=1

        I'll try to find an automatic way of determining which version of
        AOLserver to compile for, probably by having the Makefile look at
        NSD_VERSION.

2001-05-14  Scott S. Goodwin  <scott@scottg.net>

	* init.c: added more informative error message when the private
	key fails to be loaded. Essentially tells the user that the
	private key may be passphrase protected, and outputs on example
	openssl command that'll take off the passphrase.
 
2001-05-05  Scott S. Goodwin  <scott@scottg.net>

	* nsopenssl 1.1 released.
 
2001-05-04  Scott S. Goodwin  <scott@scottg.net>

	* ssl.c: Now checking for errors returned by BIO_flush in
	NsOpenSSLFlush; we don't return an error though from the function
	though, we just report it in the log.

	* init.c, config.h: made seedbytes a config parameter, which
	allows you to set the number of bytes that will be used to seed
	the PRNG.

2001-05-03  Scott S. Goodwin  <scott@scottg.net>

	* test.adp: renamed test.adp to nsopenssl-tests.adp.

	* init.c: cleanup code; moved PRNG functions to bottom;
	cleaned up NsOpenSSLInitSessionCache.

2001-05-01  Scott S. Goodwin  <scott@scottg.net>

	* init.c: Solaris problem: SeedPRNG failed because I wasn't
	adding enough randomness; I bumped up the number of bytes
	from 16 to 1024 and it's working now. Yay!

2001-04-30  Scott S. Goodwin  <scott@scottg.net>

	* nsd.tcl: added ns_param RandomFile.
	
	* 40-bit export browsers now work!!! The recent changes you see