@@ -1,3 +1,9 @@
+2001-05-22  Scott S. Goodwin  <scott@scottg.net>
+
+	* tclcmds.c: cleaned up NsOpenSSLGetConn (had to change the
+	aolserver 4.x core server to put back Ns_ConnDriverContext, which
+	was always returning NULL);
+
 2001-05-18  Scott S. Goodwin  <scott@scottg.net>
 
         * init.c, nsopenssl.c, ssl.c, tclcmds.c, Makefile: integrated
